# diff-triangle-rasterization

./: CMakeLists.txt  README.md  ext_cpu.cpp  ext_metal.mm  setup.py
.claude/: settings.local.json
cpu_rasterizer/: rasterizer_cpu.cpp  rasterizer_cpu.h
cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer_impl.cu  utils.h
diff_triangle_rasterization/: __init__.py
metal_rasterizer/: rasterizer_metal.h  rasterizer_metal.mm
